fix tier icons and spacing

--- a/src/app/battle-zone/tier-list/tier-list.component.scss
+++ b/src/app/battle-zone/tier-list/tier-list.component.scss
@@ -21,6 +21,7 @@
   background-color: var(--mat-sys-primary);
   color: var(--mat-sys-on-primary);
   text-align: center;
+  height: 24px;
   min-width: 4rem;
   font-weight: bold;
   border-color: inherit;
@@ -39,6 +40,8 @@
   align-items: center;
   flex-grow: 1;
   padding: 0.25rem;
+  border-width: 0px 0px 1px 0px;
+  border-color: var(--mat-sys-outline-variant);
   font-size: 0.875rem;
   line-height: 1.25rem;
   position: relative;
@@ -48,6 +51,7 @@
 .restricted-icon {
   right: 0px;
   top: 0px;
+  color: gray;
   transform: scale(0.75);
   position: absolute;
 }
